<resources>
    <string name="app_name">ValidadePRO</string>
    <string name="welcome_title">ValidadePRO</string>
    <string name="welcome_subtitle">Painel de gestão dark mode</string>
    <string name="company_hint">Empresa</string>
    <string name="company_default">Padaria Lobo</string>
    <string name="username_hint">Usuário</string>
    <string name="password_hint">Senha</string>
    <string name="login">Entrar</string>
    <string name="google_login">Continuar com Google</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="status_ready">Sistema pronto</string>
    <string name="open_catalog">Catálogo</string>
    <string name="new_label">Gerar etiqueta</string>
    <string name="history_label">Histórico</string>
</resources>
